# voicescribe-mobile

./: .env.example  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierrc.js  AUDIO_CHUNKING_OPTIMIZATION_PLAN.md  App.tsx  README.md  VOICESCRIBE_MOBILE_ANALYSIS.md  analysis_options.yaml  app.json  package-lock.json  package.json  pubspec.yaml  tsconfig.json
.github/workflows/: flutter_ci.yaml
android/: settings.gradle
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt  whisper-jni.cxx
integration_test/: app_test.dart
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/VoiceScribe/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/VoiceScribe.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/mappers/: sqlite_transcript_mapper.dart
lib/data/repositories/: sqflite_transcript_repository.dart  voice_scribe_auth_repository.dart
lib/data/services/: audio_recording_service.dart  pcm_chunker.dart  summary_service.dart  whisper_service.dart
lib/domain/models/: domain.dart  domain.freezed.dart  transcript_extensions.dart
lib/domain/repositories/: auth_repository.dart  transcript_repository.dart
lib/domain/use_cases/: generate_summary.dart  repair_stale_recordings.dart
lib/domain/utils/: text_utils.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_tr.dart  app_tr.arb
plan/: plan.md
plans/: ANDROID_RUN_INSTRUCTIONS.md  phase-5-speaker-diarization.md
src/native/: VoiceScribeEngine.ts  index.ts
test/features/: critical_screens_widget_test.dart  settings_flow_widget_test.dart
test/helpers/: fakes.dart
(+153 files in other folders)
